# Hiding-Erasure-Correcting-Codes

./: Cargo.toml  LICENSE  README.md
docs/: USAGE.md
src/: gf256.rs  hecc_core.rs  hecc_pipeline.rs  lib.rs
tests/: hecc_tests.rs
